# pragma-common

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  schema.capnp
.config/: nextest.toml
.github/workflows/: pragma.yaml  release.yaml
schema/: entries.proto  schema.capnp
src/: aggregation.rs  currency.rs  exchanges.rs  instrument.rs  instrument_type.rs  interval.rs  lib.rs  network.rs  services.rs  task_group.rs  timestamp.rs  trading.rs
src/contract/: builder.rs  errors.rs  mod.rs  proto.rs  types.rs
src/entries/: base.rs  depth.rs  funding_rate.rs  future.rs  global_exposure.rs  mod.rs  open_interest.rs  orderbook.rs  perp.rs  position.rs  price.rs  spot.rs  trade.rs  volume.rs
src/exchange/: currency.rs  margin_type.rs  market.rs  mod.rs
src/orderbook/: mod.rs  snapshot.rs  update.rs
src/orderbook/depth/: mod.rs
src/pair/: mod.rs
src/schemas/: schema_capnp.rs
src/starknet/: conversion.rs  errors.rs  fallback_provider.rs  mod.rs  network.rs  typed_data.rs  u256.rs
src/telemetry/: mod.rs
src/web3/: chain.rs  mod.rs  starknet_network.rs
src/web3/token/: constants.rs  mod.rs
tests/: test_capnp.rs  test_fallback_provider.rs  test_proto.rs  test_services.rs
