[package]
name = "pragma-common"
version = "0.1.17"
edition = "2021"
rust-version = "1.79"
categories = ["finance", "api-bindings"]
description = "Pragma Common types for Rust"
authors = ["Pragma <support@pragma.build>"]
keywords = ["pragma", "common", "utils"]
repository = "https://github.com/astraly-labs/pragma-common"
license = "MIT"

[features]
serde = ["dep:serde"]
capnp = ["dep:capnp"]
utoipa = ["dep:utoipa"]
telemetry = [
  "dep:tracing",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-semantic-conventions",
  "dep:opentelemetry-appender-tracing",
  "dep:tracing-subscriber",
  "dep:tracing-opentelemetry",
]
services = [
  "dep:async-trait",
  "dep:futures",
  "dep:tokio",
  "dep:tokio-util",
  "dep:anyhow",
]

[build-dependencies]
capnpc = { version = "0.21.0" }

[dependencies]
bigdecimal = "0.4.8"
thiserror = "2.0.12"

# feature[services]
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
anyhow = { version = "1.0.91", optional = true }

# feature[serde]
serde = { version = "1.0", features = ["derive"], optional = true }

# feature[capnp]
capnp = { version = "0.21.0", optional = true }

# feature[utoipa]
utoipa = { version = "5.0.0", features = [
  "axum_extras",
  "chrono",
  "uuid",
], optional = true }

# feature[telemetry]
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.26.0", features = [
  "metrics",
  "logs",
], optional = true }
opentelemetry_sdk = { version = "0.26.0", features = [
  "rt-tokio",
  "logs",
], optional = true }
opentelemetry-otlp = { version = "0.26.0", features = [
  "tonic",
  "metrics",
  "logs",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.26.0", optional = true }
opentelemetry-appender-tracing = { version = "0.26.0", default-features = false, optional = true }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
], optional = true }
tracing-opentelemetry = { version = "0.27.0", optional = true }
