[package]
name = "pragma-common"
version = "0.3.15"
edition = "2021"
rust-version = "1.81"
categories = ["finance", "api-bindings"]
description = "Pragma Common types for Rust"
authors = ["Pragma <support@pragma.build>"]
keywords = ["pragma", "common", "utils"]
repository = "https://github.com/astraly-labs/pragma-common"
license = "MIT"

[features]
serde = ["dep:serde"]
proto = ["dep:prost"]
utoipa = ["dep:utoipa"]
task-group = ["dep:tokio", "dep:futures"]
telemetry = [
  "dep:tracing",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-semantic-conventions",
  "dep:opentelemetry-appender-tracing",
  "dep:tracing-subscriber",
  "dep:tracing-opentelemetry",
]
services = [
  "dep:async-trait",
  "dep:futures",
  "dep:tokio",
  "dep:tokio-util",
  "dep:anyhow",
]
starknet = [
  "dep:async-trait",
  "dep:anyhow",
  "dep:starknet",
  "dep:serde",
  "dep:starknet-crypto",
  "dep:cainome",
  "dep:indexmap",
  "dep:serde_json",
  "dep:num-bigint",
  "dep:rust_decimal",
  "dep:tokio",
]

[build-dependencies]
prost-build = "0.13.5"

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

# feature[services] + [task-group]
anyhow = { version = "1.0.91", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }

# feature[serde]
serde = { version = "1.0", features = ["derive"], optional = true }

# feature[starknet]
cainome = { version = "0.7", features = ["abigen-rs"], optional = true }
indexmap = { version = "2.2", optional = true }
num-bigint = { version = "0.4.6", features = ["serde"], optional = true }
rust_decimal = { version = "1.37.1", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
starknet = { version = "0.15.1", optional = true }
starknet-crypto = { version = "0.7.4", optional = true }


# feature[proto]
prost = { version = "0.13", optional = true }

# feature[utoipa]
utoipa = { version = "5.0.0", features = [
  "axum_extras",
  "chrono",
  "uuid",
], optional = true }

# feature[telemetry]
opentelemetry = { version = "0.26.0", features = [
  "metrics",
  "logs",
], optional = true }
opentelemetry-appender-tracing = { version = "0.26.0", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.26.0", features = [
  "tonic",
  "metrics",
  "logs",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", features = [
  "rt-tokio",
  "logs",
], optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.27.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
], optional = true }

[dev-dependencies]
rstest = "0.25.0"
